# geolintr

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/geolintr/: __init__.py  codes.py  detector.py  mapper.py  report.py
tests/: test_geolintr.py
